[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.2"
crossbeam-utils = "0.8.7"
dbus = "0.9.5"
flume = "0.10.10"
http = "0.2.6"
isahc = "1.6.0"
json = "0.12.4"
