[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
async-std = { version =  "1.10.0", features = ["attributes"] }
color-eyre = "0.6.1"
crossbeam-channel = "0.5.2"
crossbeam-utils = "0.8.7"
futures = "0.3.21"
http = "0.2.6"
isahc = "1.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha3 = "0.10.1"
tokio = { version = "1.17.0", features = ["full"] }

[features]
